--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
+		<dependency>
+	      <groupId>org.springframework.cloud</groupId>
+	      <artifactId>spring-cloud-starter-config</artifactId>
+	    </dependency>
 	</dependencies>
 	 <dependencyManagement>
 	    <dependencies>
