--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,18 @@ spring:
     defer-datasource-initialization: true
   jackson:
     time-zone: IST
+  config:
+    import:
+    - optional:configserver:http://localhost:8888
+  cloud:
+    config:
+      profile: dev
 management:
   endpoints:
     web:
       exposure:
         include:
         - "*"
+my-properties:
+  value: 4321
+  
